[package]
name = "dusc"
version = "0.1.0"
authors = ["Kaylynn <mkaylynn7@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
clap = "2.33.3"
colored = "2"
common = { path = "../common" }
parser = { path = "../parser" }
# Hopefully this isn't a mistake.
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }